Recreated to point to the latest stable branch.
git-svn-id: https://vim.svn.sourceforge.net/svnroot/vim/vim7@1706 2a77ed30-b011-0410-a7ad-c7884a0aa172

--- a/src/configure.in
+++ b/src/configure.in
@@ -686,7 +686,7 @@ if test "$enable_pythoninterp" = "yes"; then
       [
 	vi_cv_path_python_conf=
 	for path in "${vi_cv_path_python_pfx}" "${vi_cv_path_python_epfx}"; do
-	  for subdir in lib share; do
+	  for subdir in lib64 lib share; do
 	    d="${path}/${subdir}/python${vi_cv_var_python_version}/config"
 	    if test -d "$d" && test -f "$d/config.c"; then
 	      vi_cv_path_python_conf="$d"
@@ -2557,11 +2557,11 @@ main()
 	AC_MSG_RESULT([pty mode: $vim_cv_tty_mode, group: $vim_cv_tty_group])
       else
 	vim_cv_tty_group=world
-	AC_MSG_RESULT([ptys are world accessable])
+	AC_MSG_RESULT([ptys are world accessible])
       fi
     ],[
       vim_cv_tty_group=world
-      AC_MSG_RESULT([can't determine - assume ptys are world accessable])
+      AC_MSG_RESULT([can't determine - assume ptys are world accessible])
     ],[
       AC_MSG_ERROR(cross-compiling: please set 'vim_cv_tty_group' and 'vim_cv_tty_mode')
     ])
@@ -3241,9 +3241,10 @@ if test "$GCC" = yes; then
   fi
   dnl -D_FORTIFY_SOURCE=2 crashes Vim on strcpy(buf, "000") when buf is
   dnl declared as char x[1] but actually longer.  Introduced in gcc 4.0.
+  dnl Also remove duplicate _FORTIFY_SOURCE arguments.
   AC_MSG_CHECKING(whether we need -D_FORTIFY_SOURCE=1)
   if test "$gccmajor" -gt "3"; then
-    CFLAGS=`echo "$CFLAGS -D_FORTIFY_SOURCE=1" | sed -e 's/-Wp,-D_FORTIFY_SOURCE=2//g' -e 's/-D_FORTIFY_SOURCE=2//g'`
+    CFLAGS=`echo "$CFLAGS" | sed -e 's/-Wp,-D_FORTIFY_SOURCE=.//g' -e 's/-D_FORTIFY_SOURCE=.//g' -e 's/$/ -D_FORTIFY_SOURCE=1/'`
     AC_MSG_RESULT(yes)
   else
     AC_MSG_RESULT(no)
