import jsinterp patch

--- a/src/config.mk.in
+++ b/src/config.mk.in
@@ -67,6 +67,12 @@ TCL_PRO		= @TCL_PRO@
 TCL_CFLAGS	= @TCL_CFLAGS@
 TCL_LIBS	= @TCL_LIBS@
 
+JS_SRC		= @JS_SRC@
+JS_OBJ		= @JS_OBJ@
+JS_PRO		= @JS_PRO@
+JS_CFLAGS	= @JS_CFLAGS@
+JS_LIBS	= @JS_LIBS@
+
 HANGULIN_SRC	= @HANGULIN_SRC@
 HANGULIN_OBJ	= @HANGULIN_OBJ@
 
