--- a/src/Makefile
+++ b/src/Makefile
@@ -515,7 +515,7 @@ CClink = $(CC)
 # When using -g with some older versions of Linux you might get a
 # statically linked executable.
 # When not defined, configure will try to use -O2 -g for gcc and -O for cc.
-#CFLAGS = -g
+# CFLAGS = -g -Wall
 #CFLAGS = -O
 
 # Optimization limits - depends on the compiler.  Automatic check in configure
